Fixed missing background change

--- a/labs/web/lab3/style.css
+++ b/labs/web/lab3/style.css
@@ -7,7 +7,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bitter:wght@100;200;300;400;500;600;800&display=swap');
 
 body {
-    background: #f5f5f5;
+    background: #dae3f5;
     color: #000000;
     font-family: Arial, Times New Roman;
     font-size: 16px;
@@ -32,7 +32,7 @@ header2 {
 }
 
 nav {
-    background: #D9D9D9;
+    background: #a0a7e8;
     position: absolute;
     width: 418.18px;
     height: 775.2px;
@@ -237,7 +237,7 @@ news_box1 {
     height: 152.93px;
     left: 44.44px;
     top: 278.44px;
-    background: #CDCDCD;
+    background: #c4d4f5;
 }
 
 news_box_text1 {
@@ -274,7 +274,7 @@ news_box2 {
     height: 152.93px;
     left: 44.44px;
     top: 535.78px;
-    background: #CDCDCD;
+    background: #c4d4f5;
 }
 
 news_box_text2 {
@@ -311,7 +311,7 @@ news_box3 {
     height: 152.93px;
     left: 44.44px;
     top: 777.3px;
-    background: #CDCDCD;
+    background: #c4d4f5;
 }
 
 news_box_text3 {
